--- a/public/index.html
+++ b/public/index.html
@@ -11,5 +11,14 @@
   </head>
   <body>
     <div id="app"></div>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-22648958-2"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-22648958-2');
+    </script>
   </body>
 </html>
